# easyCppExample

./: CMakeLists.txt  README.md  build_grpc.sh  init_build.sh  run_example.sh
connect/protobuf/: example.grpc.pb.cc  example.grpc.pb.h  example.pb.cc  example.pb.h  example.proto
connect/python_source/: example.pb.cc  example.pb.h  example.py  example_pb2.py  example_pb2_grpc.py
include/: easy_example.h
shell/: build_grpc.sh  init_build.sh  run_example.sh
src/: easy_example.cpp  main.cpp
